# simple-qt-chat

./: .travis.yml  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  README.md
doc/html/: AbstractMessage_8h_source.html  AuthChatCommand_8h_source.html  ChatClient_8h_source.html  ChatConnection_8h_source.html  ChatDialog_8h_source.html  ChatServer_8h_source.html  Chatee_8h_source.html  Chatroom_8h_source.html  Client_8h_source.html  CommandParser_8h_source.html  KickChatCommand_8h_source.html  LoginDialog_8h_source.html  MessageDeserializer_8h_source.html  MessageSerializer_8h_source.html  Message_8h_source.html  MotdChatCommand_8h_source.html  MuteChatCommand_8h_source.html  Server_8h_source.html  SmartPtrUtil_8h_source.html  SpecificChatCommand_8h_source.html  StringUtil_8h_source.html  TcpChatClient_8h_source.html  TcpChatConnection_8h_source.html  TcpChatServer_8h_source.html  UnmuteChatCommand_8h_source.html  annotated.html  chatlib_2proto_2ChatMessage_8pb_8h_source.html  chatlib_2proto_2NetworkMessage_8pb_8h_source.html  chatlib_2proto_2User_8pb_8h_source.html  classSimpleChat_1_1AbstractMessage-members.html  classSimpleChat_1_1AbstractMessage.html  classSimpleChat_1_1AuthChatCommand-members.html  classSimpleChat_1_1AuthChatCommand.html  classSimpleChat_1_1ChatAuthorize-members.html  classSimpleChat_1_1ChatAuthorize.html  classSimpleChat_1_1ChatClient-members.html  classSimpleChat_1_1ChatClient.html  classSimpleChat_1_1ChatCommand-members.html  classSimpleChat_1_1ChatCommand.html  classSimpleChat_1_1ChatConnection-members.html  (+120 more)
doc/latex/: annotated.tex  classSimpleChat_1_1AbstractMessage.eps  classSimpleChat_1_1AbstractMessage.tex  classSimpleChat_1_1AuthChatCommand.eps  classSimpleChat_1_1AuthChatCommand.tex  classSimpleChat_1_1ChatAuthorize.eps  classSimpleChat_1_1ChatAuthorize.tex  classSimpleChat_1_1ChatClient.eps  classSimpleChat_1_1ChatClient.tex  classSimpleChat_1_1ChatCommand.eps  classSimpleChat_1_1ChatCommand.tex  classSimpleChat_1_1ChatConnection.eps  classSimpleChat_1_1ChatConnection.tex  classSimpleChat_1_1ChatDialog.eps  classSimpleChat_1_1ChatDialog.tex  classSimpleChat_1_1ChatMessage.eps  classSimpleChat_1_1ChatMessage.tex  classSimpleChat_1_1ChatServer.eps  classSimpleChat_1_1ChatServer.tex  classSimpleChat_1_1ChatTarget.eps  classSimpleChat_1_1ChatTarget.tex  classSimpleChat_1_1Chatee.tex  classSimpleChat_1_1Chatroom.eps  classSimpleChat_1_1Chatroom.tex  classSimpleChat_1_1ChatroomChange.eps  classSimpleChat_1_1ChatroomChange.tex  classSimpleChat_1_1Client.eps  classSimpleChat_1_1Client.tex  classSimpleChat_1_1CommandParser.tex  classSimpleChat_1_1GenericChatResponse.eps  classSimpleChat_1_1GenericChatResponse.tex  (+85 more)
ext/gtest/: CMakeLists.txt
src/: CMakeLists.txt
src/chatlib/: CMakeLists.txt
src/chatlib/chat/: ChatConnection.h  Chatee.cpp  Chatee.h  Chatroom.cpp  Chatroom.h
src/chatlib/chat/commands/: AuthChatCommand.cpp  AuthChatCommand.h  CommandParser.cpp  CommandParser.h  KickChatCommand.cpp  KickChatCommand.h  MotdChatCommand.cpp  MuteChatCommand.cpp  MuteChatCommand.h  SpecificChatCommand.h  UnmuteChatCommand.cpp  UnmuteChatCommand.h
src/chatlib/client/: ChatClient.cpp  ChatClient.h  Client.h
src/chatlib/communication/: AbstractMessage.h  Message.cpp  Message.h  MessageDeserializer.cpp  MessageDeserializer.h  MessageSerializer.cpp  MessageSerializer.h
src/chatlib/proto/: CMakeLists.txt  ChatMessage.proto  NetworkMessage.proto  User.proto
src/chatlib/server/: ChatServer.cpp  ChatServer.h  Server.h
src/chatlib/util/: SmartPtrUtil.h  StringUtil.cpp
src/client/: CMakeLists.txt  Client.h  client.cpp  client_old.h  main.cpp
src/client/dialog/: ChatDialog.cpp  ChatDialog.h  LoginDialog.cpp  LoginDialog.h  chatdialog.ui
src/client/tcp/: TcpChatConnection.cpp  TcpChatConnection.h  TcpClient.cpp  TcpClient.h
src/config/: CMakeLists.txt  SimpleChatConfig.h.in
src/server/: CMakeLists.txt  Server.h  main.cpp
src/server/tcp/: TcpChatConnection.cpp  TcpChatConnection.h  TcpServer.cpp  TcpServer.h  tcp_server.cpp  tcp_server.h
src/shared/: CMakeLists.txt
src/shared/chat/: ChatConnection.h  Chatee.cpp  Chatee.h  Chatroom.cpp  Chatroom.h  CommandParser.cpp  CommandParser.h
src/shared/chat/commands/: CommandParser.cpp  KickChatCommand.cpp  MotdChatCommand.h
src/shared/communication/: AbstractMessage.cpp  AbstractMessage.h  Message.cpp  Message.h  MessageDeserializer.cpp  MessageDeserializer.h  MessageSerializer.cpp  MessageSerializer.h
src/shared/proto/: BasicMessage.proto  CMakeLists.txt  ChatMessage.proto  NetworkMessage.proto  User.proto
src/shared/util/: SmartPtrUtil.h  StringUtil.cpp  StringUtil.h
src/tcplib/: CMakeLists.txt
src/tcplib/chat/: TcpChatConnection.cpp  TcpChatConnection.h
src/tcplib/client/: ChatClient.cpp  ChatClient.h  Client.h  TcpChatClient.cpp  TcpChatClient.h  TcpClient.cpp  TcpClient.h
src/tcplib/server/: ChatServer.cpp  ChatServer.h  Server.h  TcpChatServer.cpp  TcpChatServer.h  TcpServer.cpp  TcpServer.h
test/: AbstractMessageTest.cpp  CMakeLists.txt  ChatClientTest.cpp  ChatCommandTest.cpp  ChatServerTest.cpp  ChatroomTest.cpp  ClientServerTest.cpp  CommandParserTest.cpp  DeserializerTest.cpp  MessageOutput.h  SerializerTest.cpp
test/chatlib/: AbstractMessageTest.cpp  ChatCommandTest.cpp  ChatroomTest.cpp  CommandParserTest.cpp  DeserializerTest.cpp  NetworkMessageTest.cpp  SerializerTest.cpp
test/chatlib/resources/: AbstractMessageTest.h  ChatroomTest.h  DeserializerTest.h  SerializerTest.h
test/mocks/: MockChatConnection.h  MockChatee.h  MockClient.h
test/resources/: AbstractMessageTest.h  ChatClientTest.h  ChatCommandTest.h  ChatServerTest.h  ChatroomTest.h  ClientServerTest.h  CommandParserTest.h  DeserializerTest.h  MessageTest.h  SerializerTest.h
test/server/: ClientServerTest.cpp  ServerTest.cpp  server_test.cpp
test/shared/: AbstractMessageTest.cpp  ChatroomTest.cpp  DeserializerTest.cpp  MessageSerializationTest.cpp  NetworkMessageTest.cpp  SerializerTest.cpp
test/shared/resources/: AbstractMessage.h  AbstractMessageTest.h  ChatroomTest.h  SerializerTest.h
(+21 files in other folders)
